--- a/web/xrover-web/package.json
+++ b/web/xrover-web/package.json
@@ -13,12 +13,18 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "chart.js": "^4.4.6",
+    "dotenv": "^16.4.5",
     "flowbite-react": "^0.10.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.4",
     "next": "15.0.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-pro-sidebar": "^1.1.0"
+    "react-pro-sidebar": "^1.1.0",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@types/node": "^20",
