First try to use the mqtt messages to move the car. didnt work, but had to stop because some cables burned down

--- a/web/xrover-web/package.json
+++ b/web/xrover-web/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.6",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.10.2",
+    "mqtt": "^5.10.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.4",
     "next": "15.0.3",
